app/assets/stylesheets/custom.css.scss
@import "bootstrap-sprockets";
@import "bootstrap";

/* mixins, variables, etc */
$primary-color: #1575E7;
$primary-dark: #136bd2;
$primary-light: #74aef1;
$secondary-color: #03CB69;
$accent-color: #F16404;
$secondary-accent-color: #B904DC;
$focus-highlight: #225577;
$light-grey: #EEE;
$medium-grey: #AAA;
$dark-grey: #555;

$base-line-height: 1.33em;
$global-padding: $base-line-height/2;
$nav-height: 3.750em;

@mixin border-radius($radius) {
	-webkit-border-radius: $radius;
	-moz-border-radius: $radius;
	-ms-border-radius: $radius;
	border-radius: $radius;
}

/* typography */

@import url("//fonts.googleapis.com/css?family=Lato:400,700");
@import url("//fonts.googleapis.com/css?family=Quicksand:300,400");

@font-face {
  font-family: 'Sofia Pro Light';
  src: font-url('SofiaProLight-webfont.eot');
  src: font-url('SofiaProLight-webfont.woff2') format("woff2"), 	
  font-url('SofiaProLight-webfont.woff') format("woff"), 
  font-url('SofiaProLight-webfont.ttf') format("truetype"); 
}

$px-16: 0.85em;
$px-18: 1.1em;
$px-20: 1.25em;
$px-22: 1.375em;
$px-24: 1.5em;
$px-30: 1.88em;

$body-font-family: Lato, Arial, sans-serif;
$header-font-family: 'Sofia Pro Light', Quicksand, sans-serif;

body {
	font-family: $body-font-family; 
}

h1, h2 {
	font-family: $header-font-family;
	font-weight: normal;
}

h3, h4 {
	font-family: $body-font-family;
	font-weight: 700;
}

h1 {
	font-size: $px-30;
}

h2 {
	font-size: $px-20;
}

h3 {
	font-size: $px-18;
}

h4 {
	font-size: 0.95em;
}

h1#hero-blurb {
	font-family: $body-font-family;
	font-size: $px-24;
	font-weight: normal;
	line-height: 1.6em;
}

p {
	font-size: 1em;
	line-height: $base-line-height;
}

a {
  text-decoration: none;
  color: inherit;  // for telephone numbers in iOS
}

em {
	font-style: normal;
	color: $secondary-accent-color;
}

nav li a {
 font-size: $px-16;
}

header nav li a {
	color: $dark-grey;
}

footer nav li a {
	color: $primary-color;
}

fieldset legend {
	font-family: $header-font-family;
	font-size: $px-20;
	color: $medium-grey;
}

form label {
	font-size: $px-16;
}
.form-label {
	font-size: $px-16;
}

p#hero-phone {
	font-family: $header-font-family;
	font-size: $px-24;
	color: $dark-grey;
	padding: 0;
}


/* global */
html, body, div, form, header, footer, nav, section, aside, p {
	position: relative;
  margin: 0;
  padding: 0;
  width: 100%;
  box-sizing: border-box;
}

html, body {
	height: 100%;
	float: left;
}

body {
	text-align: center;
	background-color: #FFF;
}

h1 {
	margin-bottom: $base-line-height;
}

a {
	margin:0; padding:0;
}

a:hover {
	color: $accent-color;
}

p {
	text-align: left;
	padding: $global-padding;
}

ul {
	width: fit-content;
	text-align: left;
	list-style: circle;
	margin:0;padding:0;
}

ul p {
	font-size: $px-16;
	max-width: 22em;
	padding-left: $global-padding;
}

.center-wrap {
	width: 90%;
	min-height: 100%;
	margin: 0 auto;
	margin-bottom: -($nav-height);
}

.center {
	margin: 0 auto;
}

.clear-nav {
	padding-top: $nav-height;
}

.hidden {
	visibility: hidden;
}

section {
	display: block;
	float: left;
	border-bottom: 1.5px solid $dark-grey;
}
section:last-of-type {
	border-bottom: none;
}

.row {
	width: 100%;
	position: relative;
	display: block;
	float: left;
}

.col-1-2, .col-2-2, .col-1-3, .col-2-3, .col-1-8 {
	float: left;
	display: inline-block;
	padding: 0 $global-padding;
}

.accent-border {
	width: 100%;
	display: block;
	border-bottom: 3px dotted $accent-color;
	margin-bottom: $base-line-height;
}

.button-style {
  width: fit-content;
  min-width: 135px;
  margin: 0 auto;
  background-color: $primary-color;
  color: #FFF;
  font-size: $px-20;
  padding: 15px 25px;
  
  @include border-radius(27px);
}
.button-style:hover {
	color: #FFF;
	background-color: $primary-dark;
}
.clear-btn {
	height: 15px;
	display: block;
	margin-bottom: $base-line-height;
}

nav {
	ul {
		list-style: none;
  	margin: 10px 0;
 		padding: 0;
  	height: fit-content; 
	}
	
	ul li {
  	display: inline-block;
  } 
}

aside p {
	padding: 0;
}

.table {
	display: table;
}
.tr {
	display: table-row;
}
.td {
	display: table-cell;
}

.stripe {
	background: repeating-linear-gradient(
		-45deg, $light-grey, $light-grey 5px,
		#FFF 5px, #FFF 10px
	);
}

// Prevent formatting of phone numbers
p:link {
	text-decoration: none;
	color: $dark-grey;
	padding:0; margin:0;
}

/* header */
.container > .navbar-header {
	height: $nav-height;
	margin-left: 0;
	margin-right: 0;
}
.navbar-brand {
	img {
		width: 150px;
	}
	padding: 0;
	height: fit-content;
	margin-top: 12px;
	margin-left: 15px;
}


/*
header {
	nav {
  	height: $nav-height;
  	position: fixed;
  	top: 0;
  	left: 0;
  	z-index: 10;
  	background-color: #FFF;
  	text-align: left; 

		img {
  		width: 150px;
  		display: inline-block;
  		margin-top: 12px;
		}

		ul {
  		position: absolute;
  		top: 0;
  		bottom: 0;
  		right: 0;
		}
		ul li a:hover {
			color: $accent-color;
		}
	}
}

#menu-icon {
  width: 2.5em;
  height: 2em;
  position: absolute;
  top: 0; right: 0;
  margin-top: $global-padding;
  
  .bar {
  	height: 0.45em;
  	margin-bottom: 0.25em;
  	background: $primary-color;
		@include border-radius(0.2em); 
  } 
}
/*

/* home */
#home {
	#hero-logo {
		//width: 37.5em;
		width: 40em;
		position: relative;
		top: -($nav-height - $global-padding);
		left: -2em;
	}
	#hero-row {
		overflow: visible;
		height: 12.5em;
	}
	.tr {
		margin-bottom: (2*$base-line-height);
	}
	.td:first-child {
		width: 33%;
		vertical-align: middle;
	}
	.td:nth-child(2) {
		width: 66%;
	}	
}
/* ... */

